Closed Bug 1691353 Opened 5 years ago Closed 5 years ago

TestDictionaryBinding.cpp - GeckoProfiler.h:83:5: error: ?StackCaptureOptions? has not been declared

Categories

(Core :: Gecko Profiler, defect, P2)

Firefox 87
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox85 --- unaffected
firefox86 --- unaffected
firefox87 --- fixed

People

(Reporter: petr.sumbera, Assigned: mozbugz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:85.0) Gecko/20100101 Firefox/85.0

Steps to reproduce:

While building on Solaris I got following errors:

 2:07.30 In file included from ../TestDictionaryBinding.cpp:5:
 2:07.30 /builds/psumbera/mozilla-central-build/obj-x86_64-pc-solaris2.11/dist/include/GeckoProfiler.h:83:5: error: ?StackCaptureOptions? has not been declared
 2:07.30    83 |     StackCaptureOptions aCaptureOptions) {
 2:07.30       |     ^~~~~~~~~~~~~~~~~~~
 2:08.73 In file included from ../TestExampleGenBinding.cpp:4:
 2:08.73 /builds/psumbera/mozilla-central-build/obj-x86_64-pc-solaris2.11/dist/include/GeckoProfiler.h:83:5: error: ?StackCaptureOptions? has not been declared
 2:08.73    83 |     StackCaptureOptions aCaptureOptions) {
 2:08.73       |     ^~~~~~~~~~~~~~~~~~~
 2:09.62 In file included from ../TestCodeGenBinding.cpp:6:
 2:09.62 /builds/psumbera/mozilla-central-build/obj-x86_64-pc-solaris2.11/dist/include/GeckoProfiler.h:83:5: error: ?StackCaptureOptions? has not been declared
 2:09.62    83 |     StackCaptureOptions aCaptureOptions) {
 2:09.62       |     ^~~~~~~~~~~~~~~~~~~
 2:10.25 gmake[4]: *** [/builds/psumbera/mozilla-central-build/config/rules.mk:676: TestDictionaryBinding.o] Error 1

where

The first bad revision is:
changeset:   566018:b17d03a52644
user:        Florian Quèze <florian@queze.net>
date:        Thu Feb 04 07:13:21 2021 -0800
description:
	Bug 1690375 - Record markers with partial stacks for flushing pending notifications and marking a style flush as needed, r=gerald.

	Differential Revision: https://phabricator.services.mozilla.com/D103844

My mozcinfig file is:

ac_add_options --with-system-icu
ac_add_options --with-system-libevent
ac_add_options --with-system-zlib
ac_add_options --enable-js-shell
ac_add_options --prefix=/builds/psumbera/FIREFOX-INSTALL
ac_add_options --enable-jemalloc
ac_add_options --enable-replace-malloc
ac_add_options --enable-pulseaudio
ac_add_options --enable-debug
ac_add_options --disable-install-strip
# use gcc (not clang)
ac_add_options --enable-release
ac_add_options --enable-debug-symbols
ac_add_options --disable-install-strip
ac_add_options --disable-optimize
ac_add_options --disable-geckodriver
# https://bugzilla.mozilla.org/show_bug.cgi?id=1547217
ac_add_options --disable-verify-mar
# no nasm on intel yet
ac_add_options --disable-av1
Regressed by: 1690375
Has Regression Range: --- → yes

Florian, can you please have look at this one?

Flags: needinfo?(florian)
Keywords: regression

Florian is on PTO this week, I'll take it.

Assignee: nobody → gsquelart
Severity: -- → S3
Flags: needinfo?(florian)
Priority: -- → P2

The Bugbug bot thinks this bug should belong to the 'Firefox Build System::General' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → General
Product: Firefox → Firefox Build System
Component: General → Gecko Profiler
Product: Firefox Build System → Core
Version: Trunk → Firefox 87

Set release status flags based on info from the regressing bug 1690375

Petr, could you please try the attached patch? (I don't have Solaris!)

Flags: needinfo?(petr.sumbera)

Yes, the issue is now resolved. Thank you!

Any chance to build Firefox on Linux without profiler to avoid these kinds of issues?

Flags: needinfo?(petr.sumbera)

Thank you for trying.

I'm not sure if we would be allowed to add a CI task to test unsupported platforms. 🤔
Anyway I'm hoping we'll get to bug 1635350 in the near future, which should remove these occasional breakages.

Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9aa5443ff196 Fixed non-MOZ_GECKO_PROFILER build around StackCaptureOptions - r=canaltinova
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: