Bug 1691353 - Fixed non-MOZ_GECKO_PROFILER build around StackCaptureOptions - r=canaltinova

Differential Revision: https://phabricator.services.mozilla.com/D104500